migrate to @use notation

--- a/styles.css
+++ b/styles.css
@@ -433,6 +433,11 @@ speech - синтезаторы речи
     gap: 3rem;
   }
 }
+@media all and (max-width: 500px) {
+  .section_second .section__cards {
+    grid-template-columns: 1fr;
+  }
+}
 .section__img {
   position: absolute;
   top: 0;
