--- a/styles/btn.scss
+++ b/styles/btn.scss
@@ -1,14 +1,16 @@
+@use "variables" as vars;
+
 .btn {
   border-radius: 1.4rem;
   padding: 2rem 3.5rem;
-  font-size: $size-btn;
-  color: $color-dark;
+  font-size: vars.$size-btn;
+  color: vars.$color-dark;
   background-color: transparent;
   border: none;
   cursor: pointer;
   outline-width: 0;
 
-  @media all and (max-width: $media-m) {
+  @media all and (max-width: vars.$media-m) {
     width: 100%;
   }
 
@@ -22,38 +24,38 @@
   }
 
   &_primary {
-    color: $color-white;
-    background-color: $color-dark;
+    color: vars.$color-white;
+    background-color: vars.$color-dark;
 
     @media (hover: hover) {
       &:hover,
       &:active {
-        color: $color-black;
-        background-color: $color-green;
+        color: vars.$color-black;
+        background-color: vars.$color-green;
       }
     }
   }
 
   &_secondary {
-    background-color: $color-green;
+    background-color: vars.$color-green;
 
     @media (hover: hover) {
       &:hover,
       &:active {
-        color: $color-white;
-        background-color: $color-dark;
+        color: vars.$color-white;
+        background-color: vars.$color-dark;
       }
     }
   }
 
   &_outline {
-    border: 1px solid $color-dark;
+    border: 1px solid vars.$color-dark;
 
     @media (hover: hover) {
       &:hover,
       &:active {
-        color: $color-white;
-        background-color: $color-dark;
+        color: vars.$color-white;
+        background-color: vars.$color-dark;
       }
     }
   }
@@ -61,7 +63,7 @@
   &_header {
     margin-left: 4rem;
 
-    @media all and (max-width: $media-m) {
+    @media all and (max-width: vars.$media-m) {
       display: none;
     }
   }
