--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,13 +1,12 @@
-@import "./fonts.scss";
-@import "./variables.scss";
-@import "./common.scss";
-@import "./header.scss";
-@import "./logo.scss";
-@import "./nav.scss";
-@import "./btn.scss";
-@import "./menu.scss";
-@import "./icon.scss";
-@import "./link.scss";
-@import "./heading.scss";
-@import "./section.scss";
-@import "./card.scss";
+@use "./fonts.scss";
+@use "./common.scss";
+@use "./header.scss";
+@use "./logo.scss";
+@use "./nav.scss";
+@use "./btn.scss";
+@use "./menu.scss";
+@use "./icon.scss";
+@use "./link.scss";
+@use "./heading.scss";
+@use "./section.scss";
+@use "./card.scss";
