--- a/styles/card.scss
+++ b/styles/card.scss
@@ -1,8 +1,10 @@
+@use "variables" as vars;
+
 .card {
   &_service {
-    border-radius: $radius-card;
-    border: 1px solid $color-dark;
-    box-shadow: 0 5px 0 0 $color-dark;
+    border-radius: vars.$radius-card;
+    border: 1px solid vars.$color-dark;
+    box-shadow: 0 5px 0 0 vars.$color-dark;
 
     padding: 5rem;
 
@@ -10,7 +12,7 @@
     max-width: 60rem;
     min-height: 31rem;
 
-    background-color: $color-grey;
+    background-color: vars.$color-grey;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -18,7 +20,7 @@
 
     grid-template-areas: "title img" "link img";
 
-    @media all and (max-width: $media-m) {
+    @media all and (max-width: vars.$media-m) {
       grid-template-areas: "title title" "link img";
       grid-template-rows: auto;
       max-width: 100%;
@@ -30,7 +32,7 @@
       margin-top: auto;
 
       &__text {
-        @media all and (max-width: $media-m) {
+        @media all and (max-width: vars.$media-m) {
           display: none;
         }
       }
@@ -40,7 +42,7 @@
       grid-area: img;
       margin: auto 0 auto auto;
 
-      @media all and (max-width: $media-m) {
+      @media all and (max-width: vars.$media-m) {
         max-width: 16.5rem;
       }
     }
@@ -52,11 +54,11 @@
 
   &_bg {
     &_dark {
-      background-color: $color-dark;
+      background-color: vars.$color-dark;
     }
 
     &_green {
-      background-color: $color-green;
+      background-color: vars.$color-green;
     }
   }
 
@@ -69,11 +71,11 @@
     padding: 6rem;
     position: relative;
 
-    background-color: $color-grey;
-    border-radius: $radius-card;
+    background-color: vars.$color-grey;
+    border-radius: vars.$radius-card;
     row-gap: 2.6rem;
 
-    @media all and (max-width: $media-m) {
+    @media all and (max-width: vars.$media-m) {
       grid-template-columns: 1fr;
       padding: 5rem;
       row-gap: 2rem;
@@ -85,7 +87,7 @@
       right: 13.5rem;
       transform: translateY(-50%);
 
-      @media all and (max-width: $media-m) {
+      @media all and (max-width: vars.$media-m) {
         display: none;
       }
     }
