--- a/styles/heading.scss
+++ b/styles/heading.scss
@@ -1,3 +1,5 @@
+@use "variables" as vars;
+
 .heading {
   span {
     display: inline-block;
@@ -8,20 +10,20 @@
   &_bg {
     &_white {
       span {
-        background-color: $color-white;
+        background-color: vars.$color-white;
       }
     }
 
     &_green {
       span {
-        background-color: $color-green;
+        background-color: vars.$color-green;
       }
     }
 
     &_black {
       span {
-        background-color: $color-black;
-        color: $color-white;
+        background-color: vars.$color-black;
+        color: vars.$color-white;
       }
     }
   }
