--- a/styles/icon.scss
+++ b/styles/icon.scss
@@ -1,14 +1,16 @@
+@use "variables" as vars;
+
 .icon {
   &_plus,
   &_minus {
     width: 5.8rem;
     height: 5.8rem;
     border-radius: 50%;
-    border: 1px solid $color-dark;
-    background-color: $color-grey;
+    border: 1px solid vars.$color-dark;
+    background-color: vars.$color-grey;
     position: relative;
 
-    @media all and (max-width: $media-m) {
+    @media all and (max-width: vars.$media-m) {
       width: 3rem;
       height: 3rem;
     }
@@ -18,14 +20,14 @@
       display: block;
       width: 1.8rem;
       height: 0.6rem;
-      background-color: $color-dark;
+      background-color: vars.$color-dark;
 
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
 
-      @media all and (max-width: $media-m) {
+      @media all and (max-width: vars.$media-m) {
         width: 1.3rem;
         height: 0.3rem;
       }
@@ -38,14 +40,14 @@
       display: block;
       width: 0.6rem;
       height: 1.8rem;
-      background-color: $color-dark;
+      background-color: vars.$color-dark;
 
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
 
-      @media all and (max-width: $media-m) {
+      @media all and (max-width: vars.$media-m) {
         width: 0.3rem;
         height: 1.3rem;
       }
