--- a/styles/link.scss
+++ b/styles/link.scss
@@ -1,3 +1,5 @@
+@use "variables" as vars;
+
 .link {
   $link: &; // ссылка на селектор .link
   $icon: #{$link}__icon;
@@ -5,28 +7,28 @@
 
   display: inline-flex;
   align-items: center;
-  font-size: $size-btn;
-  color: $color-black;
+  font-size: vars.$size-btn;
+  color: vars.$color-black;
   text-decoration: none;
 
   column-gap: 1.5rem;
 
   &__decor {
-    background-color: $color-dark;
+    background-color: vars.$color-dark;
 
     &_green {
-      background-color: $color-green;
+      background-color: vars.$color-green;
     }
 
     &_white {
-      background-color: $color-white;
+      background-color: vars.$color-white;
     }
   }
 
   &__icon {
     width: 2rem;
     height: 2rem;
-    fill: $color-dark;
+    fill: vars.$color-dark;
   }
 
   &_round {
@@ -48,24 +50,24 @@
 
   &_color {
     &_white {
-      color: $color-white;
+      color: vars.$color-white;
     }
 
     &_white {
-      color: $color-green;
+      color: vars.$color-green;
     }
   }
 
   &_icon {
     &_white {
       #{$icon} {
-        fill: $color-white;
+        fill: vars.$color-white;
       }
     }
 
     &_green {
       #{$icon} {
-        fill: $color-green;
+        fill: vars.$color-green;
       }
     }
   }
