--- a/styles/section.scss
+++ b/styles/section.scss
@@ -1,3 +1,5 @@
+@use "variables" as vars;
+
 .section {
   $this: &;
 
@@ -6,7 +8,7 @@
   width: 100%;
   margin: 7rem 0;
 
-  @media all and (max-width: $media-m) {
+  @media all and (max-width: vars.$media-m) {
     padding: 0 2rem;
     margin: 3rem 0;
   }
@@ -22,18 +24,18 @@
       margin-bottom: 10.5rem;
       row-gap: 3.5rem;
 
-      @media all and (max-width: $media-m) {
+      @media all and (max-width: vars.$media-m) {
         margin: 0 auto 6rem;
         max-width: 100rem;
       }
 
-      @media all and (max-width: $media-s) {
+      @media all and (max-width: vars.$media-s) {
         row-gap: 1rem;
       }
     }
 
     p {
-      @media all and (max-width: $media-s) {
+      @media all and (max-width: vars.$media-s) {
         margin-bottom: 3rem;
       }
     }
@@ -46,10 +48,14 @@
       gap: 4rem;
       margin-bottom: 12rem;
 
-      @media all and (max-width: $media-m) {
+      @media all and (max-width: vars.$media-m) {
         margin-bottom: 7rem;
         grid-template-columns: repeat(auto-fit, minmax(39rem, 1fr));
         gap: 3rem;
+      }
+
+      @media all and (max-width: vars.$media-s) {
+        grid-template-columns: 1fr;
       }
     }
   }
@@ -59,13 +65,13 @@
     top: 0;
     right: 0;
 
-    @media all and (max-width: $media-m) {
+    @media all and (max-width: vars.$media-m) {
       position: relative;
       width: 100%;
       max-width: 60rem;
     }
 
-    @media all and (max-width: $media-s) {
+    @media all and (max-width: vars.$media-s) {
       margin-bottom: 1rem;
     }
   }
@@ -76,7 +82,7 @@
     max-width: 80rem;
     margin-bottom: 8rem;
 
-    @media all and (max-width: $media-m) {
+    @media all and (max-width: vars.$media-m) {
       flex-direction: column;
       row-gap: 3rem;
       margin: 0 auto 4rem;
